# stocks_analytics

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
Docker/airflow/: .env_example  Dockerfile  docker-compose.yaml  requirements.txt
Docker/airflow/config/: dwh.yaml
Docker/airflow/dags/: append_stocks_from_csv_to_db_dag.py  ingest_raw_data_dag.py
Docker/airflow/data/: default_stocks.csv
Docker/pg/: docker-compose.yaml
dags/: append_stocks_from_csv_to_db_dag.py  data_ingestion_gcs_dag.py  etf_forecasts_dag.py  etf_transformations_dag.py  ingest_raw_data_dag.py  test_spark_dag.py  test_spark_viaSparkSubmit_dag.py  test_spark_viassh_dag.py  ticker_transformations_dag.py  transformation_dag.py
data/: default_ETFs.csv  default_stocks.csv
documentation/: documentation.md
notebook/: etf_composition.ipynb
scripts/: init.sh  shutdown.sh  startup.sh
src/: config.py  db_functions.py  download_etf_data.py  download_ticker.py  download_ticker_data.py  download_ticker_prices.py  fetch_forecast.py  fetch_symbols.py  gc_functions.py  load_ticker_data_dlt.py  load_ticker_prices_dlt.py  schemas.py  shared.py  test.py  test_spark.py
terraform/: main.tf  variables.tf
terraform/modules/google_compute_engine/: google_compute_instance.tf  main_tf.obsolete  variables.tf
tests/: test_download_ticker.py
