[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_analytics"
version = "0.0.1"
authors = [{ name = "Onur Kerimoglu", email = "kerimoglu.o@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
"yfinance>=0.2.55",
"google-cloud-bigquery==3.31.0",
"google-cloud-bigquery-storage==2.30.0",
"dlt[duckdb, bigquery]==1.9.0",
"duckdb==1.2.1"
]

[project.optional-dependencies]
test = ["pytest==8.3.5"]

