[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_analytics"
version = "0.0.1"
authors = [{ name = "Onur Kerimoglu", email = "kerimoglu.o@gmail.com" }]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest==8.3.5"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
